--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "node-sass": "^4.9.0",
     "rollup": "^1.6.0",
     "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-uglify": "^6.0.2",
     "rollup-plugin-vue": "^4.7.2",
     "sass-loader": "^7.1.0",
