--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.2.3",
   "description": "A Vue component based on Split Grid",
   "main": "dist/vue-scroll-table.umd.js",
-  "module": "dist/vue-split-grid.esm.js",
-  "unpkg": "dist/vue-split-grid.min.js",
+  "module": "dist/vue-split-grid.common.js",
+  "unpkg": "dist/vue-split-grid.umd.min.js",
   "browser": {
     "./SplitGrid": "src/components/SplitGrid.vue",
     "./SplitGridArea": "src/components/SplitGridArea.vue",
