--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-split-grid",
-  "version": "0.4.0",
+  "version": "0.7.1",
   "description": "A Vue component based on Split Grid",
-  "main": "dist/vue-split-grid.umd.js",
-  "module": "dist/vue-split-grid.common.js",
-  "unpkg": "dist/vue-split-grid.umd.min.js",
+  "main": "dist/VueSplitGrid.umd.js",
+  "module": "dist/VueSplitGrid.common.js",
+  "unpkg": "dist/VueSplitGrid.umd.min.js",
   "browser": {
     "./SplitGrid": "src/components/SplitGrid.vue",
     "./SplitGridArea": "src/components/SplitGridArea.vue",
@@ -28,12 +28,6 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
-    "rollup": "^1.6.0",
-    "rollup-plugin-buble": "^0.19.6",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-uglify": "^6.0.2",
-    "rollup-plugin-vue": "^4.7.2",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.8",
     "vue-template-compiler": "^2.5.21"
